[gd_scene load_steps=18 format=2]

[ext_resource path="res://Unit.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/oktorok-sheet.png" type="Texture" id=2]
[ext_resource path="res://Oktorok.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "back",
"speed": 4.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "forward",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "left",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "right",
"speed": 4.0
}, {
"frames": [ SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "spawn",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 6.0

[sub_resource type="CircleShape2D" id=14]
radius = 6.0

[node name="Oktorok" groups=["enemies"] instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 9 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 13 )

[node name="HitBox" parent="." index="2"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 14 )

[node name="RespawnTimer" type="Timer" parent="." index="3"]
wait_time = 3.0
one_shot = true

[node name="DecisionTimer" type="Timer" parent="." index="4"]
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
